# jigae_UP

./: README.md
install/: local_setup.sh  setup.sh
install/encoder_imu_ekf/share/encoder_imu_ekf/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/encoder_imu_ekf/share/encoder_imu_ekf/config/: ekf.yaml
install/encoder_imu_ekf/share/encoder_imu_ekf/launch/: ekf_with_serial.launch.py
install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
log/: latest_build
src/encoder_imu_ekf/: setup.cfg  setup.py
src/esp_serial/: setup.py
src/esp_serial/esp_serial/: serial_node.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/motor_control/: setup.py
src/motor_control/motor_control/: serial_key_sender.py
src/move_nav/: setup.cfg  setup.py
src/move_nav/move_nav/: encoder_imu_ekf.py
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/launch/: display_model.launch.py
src/my_robot_description/urdf/: my_robot.urdf
src/pallet_align/: package.xml  setup.cfg  setup.py
src/pallet_align/config/: aruco_detector.yaml
src/pallet_align/launch/: pallet_align.launch.py
src/pallet_align/pallet_align/: .aruco_detector_node.py.swp  aruco_detector_node.py
src/static_tf_broadcaster/: package.xml  setup.cfg  setup.py
src/tgt_nav/: package.xml  setup.cfg  setup.py
(+369 files in other folders)
