<?xml version="1.0"?>
<package format="3">
  <name>pallet_align</name>
  <version>0.1.0</version>
  <description>ArUco 기반 팔레트 정밀 정렬 + 시리얼 송신 패키지</description>
  <maintainer email="jaeseok04260@gmail.com">jaeseok</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
