<?xml version="1.0"?>
<package format="3">
  <name>encoder_imu_ekf</name>
  <version>0.0.1</version>
  <description>Serial IMU + Encoder fusion with EKF</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
